# Yconic-Work-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MASTER_PLAN.md  Makefile  PROGRESS.md  PULSE_MASTER_REPORT.md  README.md  main.py  package.json  pyproject.toml  schema.sql  scrape.md  seed_demo.py  vercel.json
.github/workflows/: ci.yml
backend/: README.md  main.py  railway.json
backend/agents/: scrape_agent.py
backend/data/: scraped_ranges.py
backend/evidence/: citation_formatter.py  google_scholar.py  pubmed.py  query_builder.py
backend/features/: drug_interactions.py  lab_interpreter.py  lab_rater.py  lab_reference_ranges.py  patterns.py  triage.py  visit_prep.py
backend/health/: injector.py  profile.py  updater.py
backend/intake/: lab_ocr.py  (+2 more)
docs/: BACKEND_ARCHITECTURE.md  CHANGELOG.md  DATA_MODELS.md  DEPLOYMENT.md  EMERGENCY_TRIAGE.md  MOBILE_SCREENS.md  ONBOARDING_FLOW.md  RAG_PIPELINE.md  README.md  SCRAPING_SOURCES.md  TESTING_STRATEGY.md  authentication.md  chat-flow.md  document-intake.md  drug-interactions.md  emergency-triage.md  healthkit-sync.md  lab-analysis.md  profile-learning.md  profile-management.md  rag-evidence.md  visit-prep.md
mobile/: app.json  eas.json  package-lock.json  package.json  tsconfig.json
my-app/: package-lock.json  package.json
tests/: test_chat_stream.py  test_health_injector.py  test_lab_ocr.py  test_pubmed_client.py  test_triage.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
(+80 files in other folders)
