[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-backend"
version = "0.1.0"
description = "Pulse AI health co-pilot backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.3.0",
    "lxml>=5.2.0",
    "supabase==2.18.1",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "scholarly>=1.7.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
